# pytex

./: .gitignore  LICENSE  README.md  argparser.py  bib.py  index.py  message.py  process.py  pyproject.toml  pytex.py  utils.py  version.py
src/pytex/: __init__.py  __main__.py  argparser.py  bib.py  conf.py  index.py  message.py  process.py
